Add opendst-maven-plugin
opendst-maven-plugin can be used to start the Deterministic Simulation
Tests. It will spawn multiple JVM (configurable with
-Dopendst.parallelism) looking for signals and bugs.

See opendst-maven-plugin/src/it for an example.