@@ -38,6 +38,11 @@
       <version>1.17.7</version>
     </dependency>
     <dependency>
+      <groupId>tools.jackson.jr</groupId>
+      <artifactId>jackson-jr-objects</artifactId>
+      <version>3.0.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.0.0</version>
@@ -46,7 +51,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.27.6</version>
+      <version>3.27.7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -55,13 +60,7 @@
       <version>2.5.5</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>tools.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>3.0.0</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    </dependencies>
 
   <build>
     <plugins>
@@ -89,7 +88,7 @@
                     <Can-Redefine-Classes>true</Can-Redefine-Classes>
                     <Can-Retransform-Classes>true</Can-Retransform-Classes>
                     <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
-                    <Boot-Class-Path>${project.artifactId}-${project.version}.jar</Boot-Class-Path>
+                    <Boot-Class-Path>${project.artifactId}.jar</Boot-Class-Path>
                   </manifestEntries>
                 </transformer>
               </transformers>
@@ -104,59 +103,6 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.5.4</version>
-        <executions>
-          <execution>
-            <id>generate-snapshot</id>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-            <configuration>
-              <systemPropertyVariables>
-                <selfie>overwrite</selfie>
-              </systemPropertyVariables>
-            </configuration>
-          </execution>
-          <execution>
-            <id>verify-snapshot</id>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/Deterministic*IT.java</include>
-              </includes>
-              <systemPropertyVariables>
-                <selfie>readonly</selfie>
-              </systemPropertyVariables>
-            </configuration>
-          </execution>
-        </executions>
-        <configuration>
-          <parallel>classes</parallel>
-          <forkCount>1C</forkCount>
-          <reuseForks>false</reuseForks>
-          <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
-          <!--
-          net.bytebuddy.safe=true is to disable Unsafe usage made by bytebuddy which is generating a warning
-          (see: https://github.com/raphw/byte-buddy/issues/1803)
-
-          enable-native-access=ALL-UNNAMED is required to allow invocation of the native methods gettimeofday and
-          clock_gettime which are used by the simulator agent to get the real current time in nanoseconds.
-          -->
-          <argLine>
-            -XX:+UnlockExperimentalVMOptions -XX:hashCode=2
-            -javaagent:${project.build.directory}/${project.build.finalName}.jar --enable-native-access=ALL-UNNAMED
-            --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
-            -Dnet.bytebuddy.safe=true
-          </argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
